unpackaged/main/default/objects/Opportunity/fields/X6sense_Account_Intent_Score__c.field-meta.xml
<CustomField>
    <fullName>X6sense_Account_Intent_Score__c</fullName>
    <label>6sense Account Intent Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>