unpackaged/main/default/objects/Opportunity/fields/X6Sense_Segment_Name__c.field-meta.xml
<CustomField>
    <fullName>X6Sense_Segment_Name__c</fullName>
    <label>6Sense Segment Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>