unpackaged/main/default/objects/Opportunity/fields/X6sense_Stage_Awareness__c.field-meta.xml
<CustomField>
    <fullName>X6sense_Stage_Awareness__c</fullName>
    <label>6sense Stage – Awareness</label>
    <type>Date</type>
</CustomField>