unpackaged/main/default/objects/Opportunity/fields/X6sense_Stage_Decision__c.field-meta.xml
<CustomField>
    <fullName>X6sense_Stage_Decision__c</fullName>
    <label>6sense Stage – Decision</label>
    <type>Date</type>
</CustomField>