unpackaged/main/default/objects/Opportunity/fields/X6sense_Stage_Purchase__c.field-meta.xml
<CustomField>
    <fullName>X6sense_Stage_Purchase__c</fullName>
    <label>6sense Stage – Purchase</label>
    <type>Date</type>
</CustomField>