unpackaged/main/default/objects/Opportunity/recordTypes/Lead.recordType-meta.xml
<RecordType>
    <fullName>Lead</fullName>
    <active>true</active>
    <businessProcess>Lead</businessProcess>
    <label>Lead</label>
</RecordType>