unpackaged/main/default/objects/Opportunity/recordTypes/New_Business.recordType-meta.xml
<RecordType>
    <fullName>New_Business</fullName>
    <active>true</active>
    <businessProcess>Standard Sales Process</businessProcess>
    <description>Used for selling products on a new contract (excluding renewal)</description>
    <label>New Business</label>
</RecordType>