unpackaged/main/default/objects/Opportunity/recordTypes/Professional_Services.recordType-meta.xml
<RecordType>
    <fullName>Professional_Services</fullName>
    <active>true</active>
    <businessProcess>Standard Sales Process</businessProcess>
    <description>Used when selling BGS. No ability to generate a quote.</description>
    <label>Professional Services</label>
</RecordType>