unpackaged/main/default/objects/Opportunity/recordTypes/Renewal.recordType-meta.xml
<RecordType>
    <fullName>Renewal</fullName>
    <active>true</active>
    <businessProcess>Standard Sales Process</businessProcess>
    <description>System generated Opportunity used for renewing a Contract at the end of its term</description>
    <label>Renewal</label>
</RecordType>