unpackaged/main/default/objects/Opportunity/recordTypes/Services_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Services_Record_Type</fullName>
    <active>true</active>
    <businessProcess>Standard Sales Process</businessProcess>
    <description>Used when selling BGS. No ability to generate a quote.</description>
    <label>Services Record Type</label>
</RecordType>