unpackaged/main/default/objects/Opportunity/recordTypes/Standard.recordType-meta.xml
<RecordType>
    <fullName>Standard</fullName>
    <active>true</active>
    <businessProcess>Standard Sales Process</businessProcess>
    <description>Used for selling products on a new contract (excluding renewal)</description>
    <label>Standard</label>
</RecordType>