unpackaged/main/default/objects/Opportunity/validationRules/Close_Date_cannot_be_null_or_past_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Close_Date_cannot_be_null_or_past_date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(CloseDate),
OR(CloseDate &lt; TODAY()
))</errorConditionFormula>
    <errorDisplayField>CloseDate</errorDisplayField>
    <errorMessage>Close Date cannot be past date</errorMessage>
</ValidationRule>