unpackaged/main/default/objects/Opportunity/validationRules/Closed_won_requires_Solution_Document.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_won_requires_Solution_Document</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISPICKVAL( StageName , &#39;Closed Won&#39;),
 ISBLANK(Solution_Document__c) 
)</errorConditionFormula>
    <errorDisplayField>Solution_Document__c</errorDisplayField>
    <errorMessage>Solution Document must be complete before Closed Won</errorMessage>
</ValidationRule>