unpackaged/main/default/objects/Opportunity/validationRules/Contract_Type_cannot_be_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_Type_cannot_be_empty</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
OR(
 ISPICKVAL( Deal_Type__c ,&#39;New Business&#39;),
 ISPICKVAL( Deal_Type__c ,&#39;Add-on&#39;)
),
ISBLANK( TEXT( Contract_Type__c ) )
)</errorConditionFormula>
    <errorDisplayField>Contract_Type__c</errorDisplayField>
    <errorMessage>Contract Type must be selected</errorMessage>
</ValidationRule>