unpackaged/main/default/objects/Opportunity/validationRules/fields_cannot_be_updated_after_closed.validationRule-meta.xml
<ValidationRule>
    <fullName>fields_cannot_be_updated_after_closed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  OR(
 ISPICKVAL( StageName ,&#39;Closed Won&#39;),
 ISPICKVAL( StageName ,&#39;Closed Lost&#39;) 
) 
,
OR(
ISCHANGED(SBQQ__PrimaryQuote__c),
ISCHANGED(CloseDate),
ISCHANGED(RecordTypeId ),
ISCHANGED(CurrencyIsoCode),
ISCHANGED(Forecast_In_Out__c),
ISCHANGED(Forecast__c)
))</errorConditionFormula>
    <errorMessage>Fields cannot be updated after the opportunity is closed</errorMessage>
</ValidationRule>