unpackaged/main/default/objects/Opportunity/validationRules/InvoiceEmailRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>InvoiceEmailRequired</fullName>
    <active>true</active>
    <errorConditionFormula>AND( OR(ISPICKVAL( StageName , &#39;3 - Solution Design &amp; Evaluation&#39;),ISPICKVAL( StageName , &#39;4 - Negotiation&#39;),ISPICKVAL( StageName , &#39;Closed Won&#39;)) , ISBLANK( Invoice_Email_s__c ) )</errorConditionFormula>
    <errorDisplayField>Invoice_Email_s__c</errorDisplayField>
    <errorMessage>Invoice Email(s) required</errorMessage>
</ValidationRule>