unpackaged/main/default/objects/Opportunity/validationRules/Leadsource_cannot_be_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Leadsource_cannot_be_empty</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
RecordType.Name = &quot;New Business&quot;,
ISBLANK(TEXT(LeadSource)),
Convert_to_Pipeline__c = FALSE
)</errorConditionFormula>
    <errorDisplayField>LeadSource</errorDisplayField>
    <errorMessage>Lead Source must be selected to save</errorMessage>
</ValidationRule>