unpackaged/main/default/objects/Opportunity/validationRules/New_Business_Opp_closed_fields_required.validationRule-meta.xml
<ValidationRule>
    <fullName>New_Business_Opp_closed_fields_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
 ISPICKVAL(StageName,&#39;Closed Won&#39;),
 ISPICKVAL(StageName,&#39;Closed Lost&#39;)
),
ISBLANK(Anticipated_Roadblocks_Challenges__c)
)</errorConditionFormula>
    <errorDisplayField>Anticipated_Roadblocks_Challenges__c</errorDisplayField>
    <errorMessage>In order to move to Closed please complete the required Key Sales Handoff fields - Anticipated RoadBlocks/challenges</errorMessage>
</ValidationRule>