unpackaged/main/default/objects/Opportunity/validationRules/New_Business_Opp_Stage_2_fields_required.validationRule-meta.xml
<ValidationRule>
    <fullName>New_Business_Opp_Stage_2_fields_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( StageName ,&#39;2 - Demo&#39;) ,
OR(
  ISBLANK(Customer_Business_Model__c), 
 ISBLANK(Targeted_Platforms__c),
 ISBLANK(TEXT(Competitors__c )),
 ISBLANK(Importance_and_Priority__c )
)
)</errorConditionFormula>
    <errorMessage>In order to move to Stage 2 please complete the required Key Sales Handoff fields - Customer Business Model, Targeted Platforms, Competitors, Importance and Priority</errorMessage>
</ValidationRule>