unpackaged/main/default/objects/Opportunity/validationRules/New_Business_Opp_Stage_3_fields_required.validationRule-meta.xml
<ValidationRule>
    <fullName>New_Business_Opp_Stage_3_fields_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
ISPICKVAL( StageName ,&#39;3 - Solution Design &amp; Evaluation&#39;),
OR(
ISBLANK(Addressable_Business_Problems__c),
ISBLANK(Customer_Expected_Outcomes__c),
ISBLANK(Integrations_Required__c),
ISBLANK( Sales_Strategy_to_Win__c),
ISBLANK( Value_Proposition__c),
ISBLANK( Budget_Source__c)
)
)</errorConditionFormula>
    <errorMessage>In order to move to Stage 3 please complete the required Key Sales Handoff fields - Addressable Business Problems, Customer expected outcomes, Integrations required, Sales strategy to win, Value proposition, Budget source</errorMessage>
</ValidationRule>