unpackaged/main/default/objects/Opportunity/validationRules/New_Business_Opp_Stage_4_fields_required.validationRule-meta.xml
<ValidationRule>
    <fullName>New_Business_Opp_Stage_4_fields_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISPICKVAL( StageName ,&#39;4 - Negotiation&#39;),
OR(
ISBLANK(Customer_Success_KPIs__c),
ISBLANK(Customer_Buying_Steps__c), 
ISBLANK(Mutual_Action_Plan__c ),
ISBLANK(Proposal_Document__c ),
ISBLANK(Solution_Document__c), 
Technical_Win__c = false
))</errorConditionFormula>
    <errorMessage>In order to move to Stage 4 please complete the required Key Sales Handoff fields - Customer Success KPI&#39;s, Customer Buying steps, Mutual action plan, Proposal Document, Sales Engineer, Solution Document, Technical Win</errorMessage>
</ValidationRule>