unpackaged/main/default/objects/Opportunity/validationRules/Partner_Or_Partner_Type_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Partner_Or_Partner_Type_Blank</fullName>
    <active>true</active>
    <errorConditionFormula>OR( AND
(NOT( ISBLANK( Partner__c ) ), ISBLANK(TEXT(Partner_Type__c) )),
AND(NOT( ISBLANK(TEXT(Partner_Type__c))), 
ISBLANK( Partner__c ))
)</errorConditionFormula>
    <errorMessage>For Partner and Partner Type fields, if one field is completed both fields must have a value.</errorMessage>
</ValidationRule>