unpackaged/main/default/objects/Opportunity/validationRules/Stage_Cannot_Regress.validationRule-meta.xml
<ValidationRule>
    <fullName>Stage_Cannot_Regress</fullName>
    <active>true</active>
    <errorConditionFormula>CASE(StageName,
&quot;0 - Meeting Pending&quot;, 1,
&quot;0 - Meeting Scheduled&quot;, 2,
&quot;0 - Meeting Occurred&quot;, 3,
&quot;0 - Disqualified&quot;, 4,
&quot;1 - Discovery&quot;, 5,
&quot;2 - Demo&quot;, 6,
&quot;3 - Solution Design &amp; Evaluation&quot;, 7,
&quot;4 - Negotiation&quot;, 8,
&quot;Closed Won&quot;, 9,
&quot;Closed Lost&quot;, 9,
 0) &lt; 
CASE(TEXT(PRIORVALUE(StageName)),
&quot;0 - Meeting Pending&quot;, 1,
&quot;0 - Meeting Scheduled&quot;, 2,
&quot;0 - Meeting Occurred&quot;, 3,
&quot;0 - Disqualified&quot;, 4,
&quot;1 - Discovery&quot;, 5,
&quot;2 - Demo&quot;, 6,
&quot;3 - Solution Design &amp; Evaluation&quot;, 7,
&quot;4 - Negotiation&quot;, 8,
&quot;Closed Won&quot;, 9,
&quot;Closed Lost&quot;, 9,
0)</errorConditionFormula>
    <errorMessage>The Opportunity Stage cannot regress to a previous Stage.</errorMessage>
</ValidationRule>