unpackaged/main/default/objects/Opportunity/validationRules/Stage_must_contain_Primary_Quote.validationRule-meta.xml
<ValidationRule>
    <fullName>Stage_must_contain_Primary_Quote</fullName>
    <active>true</active>
    <errorConditionFormula>AND( OR( ISPICKVAL( StageName , &#39;2 - Demo&#39;) ,ISPICKVAL( StageName , &#39;3 - Solution Design &amp; Evaluation&#39;),ISPICKVAL( StageName , &#39;4 - Negotiation&#39;)) ,  ISBLANK(SBQQ__PrimaryQuote__c	) )</errorConditionFormula>
    <errorDisplayField>SBQQ__PrimaryQuote__c</errorDisplayField>
    <errorMessage>Primary Quote cannot be blank in the current stage (2,3 or 4)</errorMessage>
</ValidationRule>